Fix task3 gaps

--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -1,7 +1,7 @@
 /**
-* I think element-ui's default theme color is too light for long-term use.
-* So I modified the default color and you can modify it to your liking.
-**/
+ * Custom Element Plus theme variables.
+ * Modify them to fit your design.
+ */
 
 /* theme color */
 $--color-primary: #1890ff;
@@ -20,9 +20,9 @@ $--border-color-lighter: #e6ebf5;
 $--table-border:1px solid#dfe6ec;
 
 /* icon font path, required */
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
+$--font-path: 'element-plus/dist/fonts';
 
-@import "~element-ui/packages/theme-chalk/src/index";
+@import "element-plus/theme-chalk/src/index.scss";
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
